--- a/test6/ui/实验信息.html
+++ b/test6/ui/实验信息.html
@@ -67,7 +67,7 @@
       <div id="u318" class="ax_default label">
         <div id="u318_div" class=""></div>
         <div id="u318_text" class="text ">
-          <p><span>实验信息用例，仅对学生用户</span></p>
+          <p><span>实验信息用例</span></p>
         </div>
       </div>
 
