--- a/test6/ui/课程信息.html
+++ b/test6/ui/课程信息.html
@@ -28,7 +28,7 @@
       <div id="u345" class="ax_default label">
         <div id="u345_div" class=""></div>
         <div id="u345_text" class="text ">
-          <p><span>课程信息用例，仅对学生用户</span></p>
+          <p><span>课程信息用例</span></p>
         </div>
       </div>
 
